--- a/src/Front Page/menu.css
+++ b/src/Front Page/menu.css
@@ -3,7 +3,7 @@
     flex-direction: row;
     justify-content: flex-end;
     align-items: center;
-    margin-bottom: 3vw;
+    /* margin-bottom: 3vw; */
     width: 0 auto;
     /* display: inline-block; */
     background: rgb(235, 214, 188);
@@ -24,7 +24,7 @@
     display: flex;
     flex-direction: row;
     justify-content: flex-start;
-    margin-bottom: 1vw;
+    /* margin-bottom: 1vw; */
     margin-top: 1vw;
     font-family: "Calibri";
     font-size:14px;
@@ -70,8 +70,8 @@ a{
 .purecontentPage{
     display: flex;
     flex-direction: column;
-    width: 50vw;
-    padding: 5vw;
+    width: 70vw;
+    /* padding: 2vw; */
     color: rgb(82, 81, 81);
     justify-content: center;
     text-align: justify;
@@ -79,9 +79,9 @@ a{
     margin-right: auto;
 }
 
-.purecontentImg{
+/* .purecontentImg{
     display: flex;
     flex-direction: row;
     border-radius: 5px;
     width: 30%;
-}
+} */
