--- a/src/Components/Pages/tour.css
+++ b/src/Components/Pages/tour.css
@@ -2,16 +2,25 @@
     width: 60vw;
     margin-left: auto;
     margin-right: auto;
+    margin-top: 5vh;
+    font-family: 'Tahoma';
 }
 
 .descriptionLi{
     display: flex;
     flex-direction: column;
     text-align: justify;
+    border: 2px solid #d4e5f7;
+    border-radius: 5px;
+    background: #dce5fc;
+    padding: 2vw;
+    color: #001959;
+    margin-bottom: 1vh;
 }
 
 .descriptionLi div{
     text-align: right;
+    /* padding-left: ; */
 }
 
 /* .descriptionLi div button{
@@ -35,13 +44,14 @@
     font-size: 15px;
     font-weight: bold;
     background-color: #5EB82F;
+    /* background-color: #37e04e; */
     color: white;
     border-radius: 0.5vw;
   }
 
   .availableButton:hover{
     cursor:pointer;
-    background-color: darkgreen;
+    background-color: rgb(8, 131, 14);
     color: rgb(250, 250, 141)
   }
 
@@ -65,8 +75,48 @@
   .searchrender_Wrapper{
     display: flex;
     flex-direction: row;
+    /* width: 30vw; */
   }
 
+  .Ul_ItemContent {
+    display: flex;
+    flex-direction: row-reverse;
+    justify-content: flex-end;
+    justify-items: start;
+    padding: 0;
+  }
+
+  .Li_ItemContent{
+    list-style-type: none;
+    font-size: 12px;
+    text-align: left;
+    color: #001959;
+    font-style: italic;
+    padding-left: 3vw;
+  }
+
+  .div_ItemObj{
+    display: flex;
+    flex-direction: column;
+    align-content: flex-end;
+    justify-content: flex-end;
+    margin-top: -25vh;
+    max-width: 30vw;
+    margin-left: 20vw;
+  }
+
+  .availablePeriods{
+    display: flex;
+    flex-direction: row;
+    justify-content: flex-start;
+    padding-bottom: 10vh;
+    margin-left: 1vw;
+  }
+
+  .minimumRate_details{
+    font-size: 14px;
+    font-weight: bold;
+  }
   /* .searchFront-items {
     position: absolute;
     border: 1px solid #d4d4d4;
