--- a/src/Components/Pages/tour.css
+++ b/src/Components/Pages/tour.css
@@ -1,5 +1,5 @@
 .descriptionUl{
-    width: 60vw;
+    width: 65vw;
     margin-left: auto;
     margin-right: auto;
     margin-top: 5vh;
@@ -13,14 +13,22 @@
     border: 2px solid #d4e5f7;
     border-radius: 5px;
     background: #dce5fc;
-    padding: 2vw;
+    padding: 1vw 2vw;
     color: #001959;
     margin-bottom: 1vh;
+    /* height: 10vh; */
 }
 
 .descriptionLi div{
     text-align: right;
     /* padding-left: ; */
+}
+
+.descriptionContent{
+  display: flex;
+  flex-direction: row;
+  justify-content: space-around;
+  align-items: flex-start;
 }
 
 /* .descriptionLi div button{
@@ -39,9 +47,9 @@
   }
 
   .availableButton{
-    padding: 1vw;
-    width: 13vw;
-    font-size: 15px;
+    padding: 0.5vw 1vw;
+    width: 10vw;
+    font-size: 13px;
     font-weight: bold;
     background-color: #5EB82F;
     /* background-color: #37e04e; */
@@ -56,7 +64,7 @@
   }
 
 
-  .onrequestButton{
+  /* .onrequestButton{
     padding: 1vw;
     width: 13vw;
     font-size: 15px;
@@ -70,7 +78,7 @@
     cursor:pointer;
     background-color: rgb(170,15,15);
     color:rgb(250, 250, 141)
-  }
+  } */
 
   .searchrender_Wrapper{
     display: flex;
@@ -86,35 +94,41 @@
     padding: 0;
   }
 
+  /* .imageSearchrender{
+    min-width: '15vw';
+    min-height: '15vw';
+    border-radius: '5px'; 
+  } */
+
   .Li_ItemContent{
     list-style-type: none;
     font-size: 12px;
-    text-align: left;
+    text-align: justify;
     color: #001959;
-    font-style: italic;
-    padding-left: 3vw;
+    /* font-style: italic; */
+    padding-left: 1vw;
+    min-width: 15vw;
   }
 
   .div_ItemObj{
     display: flex;
     flex-direction: column;
-    align-content: flex-end;
+    align-content: flex-start;
     justify-content: flex-end;
-    margin-top: -25vh;
     max-width: 30vw;
-    margin-left: 20vw;
   }
 
   .availablePeriods{
     display: flex;
-    flex-direction: row;
-    justify-content: flex-start;
-    padding-bottom: 10vh;
+    flex-direction: column;
+    align-items: flex-start;
+    /* justify-content: flex-start; */
     margin-left: 1vw;
+    padding-bottom: 4vw;
   }
 
   .minimumRate_details{
-    font-size: 14px;
+    font-size: 12px;
     font-weight: bold;
   }
   /* .searchFront-items {
